<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="10dp"
            android:background="@color/nav_view_header"

            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/politician_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_vp_placeholder_largo"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nestedScroll"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RatingBar
                android:id="@+id/rating_politician"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_marginLeft="24dp"
                android:isIndicator="true"
                android:layout_marginTop="20dp"
                android:progressDrawable="@drawable/rating_bar_layerlist_big"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                android:text="@string/charge"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:id="@+id/charge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                android:text="@string/list"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big"/>

            <TextView
                android:id="@+id/partyChangeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp"
                android:text="@string/party_change"
                android:visibility="gone"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:id="@+id/partyChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:id="@+id/expandable_header_political_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="24dp">

                <ImageView
                    android:id="@+id/expandable_header_section_arrow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_down"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="Experiencia Politica"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/expandable_header_section_arrow1"
                    android:textSize="@dimen/text_size_big"/>

            </RelativeLayout>

            <com.crealoya.votopilas.ui.view.NestedListView
                android:id="@+id/political_experience_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:visibility="gone"
                android:scrollbars="none" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expandable_header_laboral_experience"
                android:visibility="gone"
                android:layout_marginLeft="24dp">

                <ImageView
                    android:id="@+id/expandable_header_section_arrow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_down"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="Experiencia Laboral"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/expandable_header_section_arrow2"
                    android:textSize="@dimen/text_size_big"/>

            </RelativeLayout>

            <com.crealoya.votopilas.ui.view.NestedListView
                android:id="@+id/labor_experience_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:visibility="gone"
                android:scrollbars="none" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expandable_header_education"
                android:visibility="gone"
                android:layout_marginLeft="24dp">

                <ImageView
                    android:id="@+id/expandable_header_section_arrow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_down"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="Educación"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/expandable_header_section_arrow3"
                    android:textSize="@dimen/text_size_big"/>

            </RelativeLayout>

            <com.crealoya.votopilas.ui.view.NestedListView
                android:id="@+id/education_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:scrollbars="none" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:background="@android:color/darker_gray"/>

            <com.crealoya.votopilas.ui.view.NestedListView
                android:id="@+id/rating_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/show_rating"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_content_create"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>